--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@ img {
 
 <h2>Our Baked Goods</h2>
 <p>We start our day at the crack of dawn to bake our own muffins, bread, and dinner rolls. Loaves not used that day are donated to the local food shelter. </p>
-
+<p><picture>  <img src="images/bread-400.jpg" alt="close-up of sliced rustic bread"></picture><br>We start our day…
+	
 <h2>Our Burgers</h2>
 <p>People come from all over to enjoy our lovingly made burgers. We grind our own locally-sourced organic beef and turkey so you know it's fresh and free from fillers and other nonsense. Go for one of our creative topping combos or stick with the classics. </p>
 
