--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@ img {
 <h2>Our Baked Goods</h2>
 <p>We start our day at the crack of dawn to bake our own muffins, bread, and dinner rolls. Loaves not used that day are donated to the local food shelter. </p>
 
-<p><picture> 	<source media="(min-width: 480px)"           srcset="images/bread-1200.jpg">  
+<p><picture> 	<source media="(min-width: 480px)"           srcset="images/bread-1200.jpg"  
 		images/bread-1200.jpg 1200w, 
 		images/bread-800.jpg 800w"
-		sizes="80vw" 
-
+		sizes="80vw">
 		<img src="images/bread-400.jpg" alt="close-up of sliced rustic bread"></picture><br>We start our day…
 
 	
