--- a/index.html
+++ b/index.html
@@ -52,9 +52,21 @@ img {
 <h2>Our Burgers</h2>
 <p>People come from all over to enjoy our lovingly made burgers. We grind our own locally-sourced organic beef and turkey so you know it's fresh and free from fillers and other nonsense. Go for one of our creative topping combos or stick with the classics. </p>
 
+<p><picture> 	<source media="(min-width: 480px)"           srcset="images/burgers-1200.jpg"  
+		images/burgers-1200.jpg 1200w, 
+		images/burgers-800.jpg 800w"
+		sizes="80vw">
+		<img src="images/burgers-400.jpg" alt="close-up of sliced rustic bread"></picture><br>We start our day…	
+	
+	
 <h2>Catch of the Day</h2>
 <p>Our chef works with local fisherman to pick the freshest the sea has to offer for our daily seafood special. Our Roast Cod Caponata with Roasted Potatoes is an old favorite with our regulars.</p>
 
+<p><picture> 	<source media="(min-width: 480px)"           srcset="images/fish-1200.jpg"  
+		images/fish-1200.jpg 1200w, 
+		images/fish-800.jpg 800w"
+		sizes="80vw">
+		<img src="images/fish-400.jpg" alt="close-up of sliced rustic bread"></picture><br>We start our day…
 
 
 </body>
